--- a/style.css
+++ b/style.css
@@ -3,12 +3,33 @@ padding: 0px;}
 body{background-color: rgb(100, 109, 100);}
 h1{font-size: 3rem;
     text-align: center;
-font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;}
+font-family: 'Merriweather', serif
+;
+text-shadow: rgb(17, 91, 49) 2px 2px 1px;}
 #box{
     max-width: 700px;
     height: 500px;
     border:2px solid cyan;
     margin: 0px auto;
-    background-color:greenyellow
-    ;
+    background-color: rgba(24, 129, 20, 0.2);
+    
+}
+input{}
+
+input, button {
+  padding: 10px;
+  border: 1px solid blue;
+  border-radius: 5px;
+ margin-left: 20px;
+
+}
+
+ul {
+  list-style-type: none;
+  padding: 0;
+}
+
+li {
+  padding: 8px;
+  border-bottom: 1px solid #ddd;
 }
