--- a/style.css
+++ b/style.css
@@ -19,6 +19,7 @@ text-shadow: rgb(17, 91, 49) 2px 2px 1px;}
   height: 400px;
   background-color: dimgray;
   border: 2px solid black;
+   position: relative;
 
 }
 input:hover{background-color: #45a049;}
@@ -43,3 +44,12 @@ li {
   padding: 8px;
   border-bottom: 1px solid #ddd;
 }
+#hat{border: 2px solid rgb(14, 13, 13);
+  display: block;
+background-color: rgb(9, 120, 143);
+width: 300px;       /* fix vagy max szélesség */
+  margin: 30px auto;
+position:absolute;
+bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);}
