--- a/style.css
+++ b/style.css
@@ -42,7 +42,12 @@ ul {
 
 li {
   padding: 8px;
-  border-bottom: 1px solid #ddd;
+  
+  margin-left: 50px;
+  font-size: 25px;
+  text-shadow: #45a049 2px 2px 2px;
+  color: beige;
+  ;
 }
 #hat{border: 2px solid rgb(14, 13, 13);
   display: block;
@@ -53,3 +58,14 @@ position:absolute;
 bottom: 0;
   left: 50%;
   transform: translateX(-50%);}
+  li::marker {
+  content: "★ ";
+  color: rgb(0, 6, 1);
+  font-size: 25px;
+}
+
+li:nth-child(odd)::marker{
+  content: "💰";
+  color: rgb(0, 6, 1);
+  font-size: 25px;
+}
